# codex-5.6-model-radar-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  inspect-codex-radar-api.yml  update-codex-radar.yml
data/api/: model_iq_history.csv  monitor_status.json
data/history/: runs.csv  task_matrices.csv
data/history/batches/: 2026-07-15-am.csv  2026-07-15-pm.csv
data/schema/: task_results.example.csv
data/weights/: task_weights.csv
docs/: ANOMALIES.md  API_INTEGRATION.md  BILINGUAL_POLICY.md  COSTS.md  DATA_SOURCES.md  METHODOLOGY.md  PROJECT_OVERVIEW_EN.md  PROJECT_OVERVIEW_ZH_CN.md  RECOMMENDATIONS.md  TEST_TASKS.md
radar/: __init__.py  anomaly.py  api.py  scoring.py
reports/: api-latest.en.md  api-latest.md  api-latest.zh-CN.md  latest.en.md  latest.md  latest.zh-CN.md
reports/history/: 2026-07-14-pm.md  2026-07-15-am.md  2026-07-15-pm.md  README.md
scripts/: build_api_report.py  build_report.py  fetch_codex_radar.py  inspect_codex_radar_api.py
tests/: test_anomaly.py  test_api.py  test_repository_data.py  test_scoring.py
