[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-56-model-radar"
version = "0.1.0"
description = "Difficulty-weighted monitoring and recommendations for GPT-5.6 Codex models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FYLiu39"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
